--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
 		"postinstall": "npm run bootstrap",
 		"prettier:check": "prettier --check \"**/*\"",
 		"prettier:write": "prettier --write \"**/*\"",
-		"postpublish": "lerna run install:safe --scope lit-plugin && echo \"🎉 Published successfully! You can now publish the vscode extension seperately by running 'cd packages/vscode-lit-plugin && npm run publish'\"",
+		"postpublish": "lerna bootstrap --ignore-scripts --scope lit-plugin && echo \"🎉 Published successfully! You can now publish the vscode extension seperately by running 'cd packages/vscode-lit-plugin && npm run publish'\"",
 		"publish": "lerna run prepare && lerna publish --exact && npm run postpublish",
 		"publish:next": "lerna run prepare && echo \"When asked, please choose 'Custom Prerelease' and use default value\" && lerna publish --dist-tag next --preid next --exact && npm run postpublish",
-		"bootstrap": "lerna clean --yes && lerna bootstrap --hoist --ignore lit-plugin && lerna run install:safe --scope lit-plugin && npm run copylink",
+		"bootstrap": "lerna clean --yes && lerna bootstrap --hoist --ignore lit-plugin && lerna bootstrap --ignore-scripts --scope lit-plugin && npm run copylink",
 		"lint": "eslint .",
 		"build": "lerna run build --parallel --stream",
 		"watch": "lerna run watch --parallel --stream",
@@ -45,7 +45,6 @@
 		"copylink": "node scripts.js copylink",
 		"copylink:watch": "nodemon --exec \"npm run copylink\""
 	},
-	"dependencies": {},
 	"devDependencies": {
 		"@appnest/readme": "^1.2.7",
 		"@typescript-eslint/eslint-plugin": "^3.2.0",
